updating autogenerated wf files to newest version

--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -53,15 +53,24 @@ on:
         required: false
         type: string
 
+env:
+  zef_fetch_degree: 4
+  zef_test_degree: 2
+  # saving a few characters on the default C:\Users\RUNNER~1\AppData\Local\Temp trying to avoid the 260 chars
+  # max path length limit of Windows
+  # https://learn.microsoft.com/en-us/windows/win32/fileio/naming-a-file#maximum-path-length-limitation
+  TMP: ${{ inputs.os == 'windows' && 'D:\T' || '/tmp' }}
+  ZEF_CONFIG_TEMPDIR: ${{ inputs.os == 'windows' && 'D:\T' || '/tmp' }}
+  TEMP: ${{ inputs.os == 'windows' && 'D:\T' || '/tmp' }}
+
 jobs:
   runner:
     runs-on: ${{ inputs.os }}-${{ inputs.os_version }}
-
-    env:
-      zef_fetch_degree: 4
-      zef_test_degree: 2
-
     steps:
+
+    - name: Windows - creating shortest possible TMP dir
+      if: ${{ inputs.os == 'windows' }}
+      run: mkdir -Force "${{ env.ZEF_CONFIG_TEMPDIR }}"
 
     - uses: Raku/setup-raku@v1
       with:
@@ -99,3 +108,4 @@ jobs:
     - name: Ad-hoc post command
       if: ${{ inputs.ad_hoc_post_command }}
       run: ${{ inputs.ad_hoc_post_command }}
+
